tweak(bots): tokens

--- a/xtra/.env
+++ b/xtra/.env
@@ -1,2 +1,2 @@
-TOKEN=MTIwODQxMjAyMjgyMDA0NDg1MQ.GZeS0h.4Gh1C0eHtoIBoUZQis-axAUn44QUs0wmnC-_bM
+TOKEN=MTIwODQxMjAyMjgyMDA0NDg1MQ.G5Q8Vw.2YE_t6zuWJ0KPhK-s-Rb5Ss968Yvpdn8yqdaUk
 PREFIX=!
