tweak(base): token

--- a/xtra/.env
+++ b/xtra/.env
@@ -1,2 +1,2 @@
-TOKEN=MTIwODQxMjAyMjgyMDA0NDg1MQ.G5Q8Vw.2YE_t6zuWJ0KPhK-s-Rb5Ss968Yvpdn8yqdaUk
+TOKEN=MTIwODQxMjAyMjgyMDA0NDg1MQ.G9rt__.5QPSCKoMO-3etODrzzcVZXx3vexhnluDFfRbkY
 PREFIX=!
